<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/navigation_drawer_group_home">
        <item android:id="@+id/nav_item_home"
            android:title="@string/home" />
        <item android:id="@+id/nav_item_horario"
            android:title="@string/hor_rio" />
        <item android:id="@+id/nav_item_pedidostroca"
         android:title="@string/pedidos_de_troca" />
        <item android:id="@+id/nav_item_teste"
            android:title="TROCA RECEBIDA" />
        <item android:id="@+id/nav_item_teste2"
            android:title="SUBMETER TROCA" />
    </group>

    <group
        android:id="@+id/navigation_drawer_group_two">
        <item android:id="@+id/nav_item_settings"
            android:title=""
            app:actionLayout="@layout/menu_settings_item"/>
        <item android:id="@+id/nav_item_logout"
            app:actionLayout="@layout/menu_logout_item"
            android:title="" />
    </group>
</menu>