<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.loginscreen.MainActivity">


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/usericon"
        android:drawablePadding="17dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="18dp"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/passwordicon"
        android:drawablePadding="17dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="18dp"
        android:paddingLeft="17dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tvEsquecer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/esqueceu_se_da_password"
        android:textColor="@color/white"
        android:textSize="12sp" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardEntrar"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tvEsquecer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/cardBlue"
        app:cardCornerRadius="25dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/entrar"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardEntrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/aindaconta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/ainda_n_o_tem_uma_conta"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_registar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/aindaconta"
            android:text="@string/registe_se"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>


</RelativeLayout>
